# strada-toolbox

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
strada/: __init__.py  app.py  cli.py
strada/config/: __init__.py  constants.py
strada/core/: __init__.py  classify.py  preprocess.py  verify.py
strada/io/: __init__.py  readers.py  reporters.py
